[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/State/Attack.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Character/Character.gd" type="Script" id=2]
[ext_resource path="res://Scripts/State/Move.gd" type="Script" id=3]
[ext_resource path="res://Scripts/State/StateMachine.gd" type="Script" id=4]

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="FacingPivot" type="Node2D" parent="Sprite"]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="StaminaRegen" type="Timer" parent="."]
wait_time = 0.2
autostart = true
[connection signal="timeout" from="StaminaRegen" to="." method="_on_stamina_regen"]
